fix: increase margin-top for form button for better spacing

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ form button:hover {
   height: auto;
   height: auto;
   border-radius: 8px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 #home {
   color: rgb(240, 217, 217);
